[package]
name = "underdose"
version = "0.0.0"
edition = "2021"
authors = ["LitiaEeloo <litiaeeloo@gmail.com>"]
description = "May the dotfiles be with you."
readme = "Readme.md"
homepage = "https://github.com/LighghtEeloo/underdose"
repository = "https://github.com/LighghtEeloo/underdose"
license = "MIT"
keywords = ["cli", "dotfile", "configuration"]
categories = ["command-line-utilities"]

[[bin]]
name = "underdose"

[dependencies]

# static
once_cell = "1.8"

# error handling
anyhow = "1.0"

# async
tokio = { version = "1", features = ["full"] }
futures = { version = "0.3", features = ["executor"] }

# logging
log = "0.4"
env_logger = "0.10"

# serde
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
toml_edit = "0.20"

# git operations
git2 = "0.18"

# cli
clap = { version = "4.0", features = ["derive"] }
colored = "2.0"

# path management
directories = "5.0"
shellexpand = { version = "3.0", features = ["path"] }

# filelock
fslock = "0.2"

# web
url = "2"
git-url-parse = "0.4"
uuid = { version = "1.4", features = ["serde", "v1", "std", "rng"] }

# data structures
indexmap = { version = "2.0", features = ["serde"] }
# phf = { version = "0.11", features = ["macros"] }

[build-dependencies]
clap = { version = "4.0", features = ["derive"] }
clap_complete = "4"
