[package]
name = "underdose"
version = "0.0.6"
edition = "2024"
authors = ["LitiaEeloo <litiaeeloo@gmail.com>"]
description = "May the dotfiles be with you."
readme = "readme.md"
homepage = "https://github.com/LighghtEeloo/underdose"
repository = "https://github.com/LighghtEeloo/underdose"
license = "MIT"
keywords = ["cli", "dotfile", "configuration"]
categories = ["command-line-utilities"]

[[bin]]
name = "underdose"

[dependencies]

# cli toolbox
sculptor = { version = "0.0.9", features = ["project_info", "file_io"]}

# static
once_cell = "1.20"

# error handling
anyhow = "1.0"

# async
# tokio = { version = "1", features = ["full"] }
# futures = { version = "0.3", features = ["executor"] }

# logging
log = "0.4"
env_logger = "0.11"

# serde
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
toml_edit = "0.22"

# git operations
git2 = "0.20"
rustygit = "0.5"

# cli
clap = { version = "4.5", features = ["derive"] }
colored = "3.0"

# path management
directories = "6.0"
shellexpand = { version = "3.0", features = ["path"] }

# filelock
fslock = "0.2"

# web
# url = "2"
# git-url-parse = "0.4"

# data structures
indexmap = { version = "2.7", features = ["serde"] }
# phf = { version = "0.11", features = ["macros"] }
uuid = { version = "1.11", features = ["serde", "v1", "std", "rng"] }

[build-dependencies]
clap = { version = "4.0", features = ["derive"] }
clap_complete = "4"
